--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/hjwebsite.ico">
+  <meta name="description" content="Resume of Harleen Judge">
+  <meta name="author" content="862136412">
 
-  <title>John Doe - Business Administration</title>
+  <title>Harleen Judge - Pre-med student</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/harleenjudge.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,23 +61,43 @@
         <h1 class="mb-3">John Doe
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Hi my name is Harleen Judge. I am a 3rd year neuroscience major at UCR who is
+pursuing a path towards medicine. A little bit about myself is that I love to give back to
+underserved communities. A big part of my future is to hopefully become a physician so I can do
+my part to make the world a healthier place. I am currently working outward that goal by actively
+pursuing to medical schools and gaining experience in the medical field through shadowing and
+volunteering at clinics and hospital. Alongside this, I look forward to spending quality time with
+my family and friends.<br><br>
 
-        Enter bio here<br><br>
+        Furthermore I have a passion for helping and giving back to communities which have
+been underserved as I believe they too deserve to have the best car that can be possibly offered.
+This is a driving force in many of the extracurricular activities I pursue such as being a member
+of Street Medical clinic which focuses on providing the homeless community with access to
+healthcare and any vital goods they may need. In addition, outside of the medical field I try to
+give back through my organization at UCR called Never Ending Cycle which focuses on
+providing female homeless with much needed access to femine hygiene products through
+donations and educating the community.<br><br>
 
-        Enter bio here
+
+
+        I am a diligent and caring individual. Being dedicated to the work allows me to put in my
+full effort and allows me to do everything to the best of my ability so there are no regrets, which
+will help me execute my duties in a complete and efficient manner. Being caring has allowed me
+to pay more attention to other needs and wants thus I am able to care for patients very well so
+their stay is as comfortable as possible. Both of these I believe are essential in pursuing the field
+of medicine.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin/harleenk001.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/harleenk001">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter/harleenk001.com">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:hjudg001@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,9 +115,9 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • President of Never Ending Cycle at UCR <br> 
+              • Volunteer at ARMC<br>
+              • Volunteer at Street Medicine Clinic<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -151,34 +171,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Notre Dame High School San Jose</h3>
+            <div class="subheading mb-3">Diploma from Notre Dame High School</div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2016 - June 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Current Undergrad</div>
+            <div>Neuroscience Major</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">Present</span>
           </div>
         </div>
 
@@ -191,7 +200,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/IMG_5455" width="500px">
+            <img src="img/IMG_5433" width="500px"><br>
+            <img src="img/IMG_5456" width="500px">
+            <img src="img/IMG_1486" width="500px"><br>
         </center>
       </div>
     </section>
