--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Harleen Judge</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/harleenjudge.jpg" alt="Profile Picture">
       </span>
@@ -58,7 +58,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Harleen Judge
+        
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
         <p class="lead mb-4">Hi my name is Harleen Judge. I am a 3rd year neuroscience major at UCR who is
@@ -211,7 +212,7 @@ of medicine.
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Harleen Judge</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
